# osccontrol-light

./: .gitignore  CMakeLists.txt  README.md  build_plugins.sh  create_plugin_for_preset.sh  osccontrol-light.jucer  oscsend-light.jucer  oscsend-vst.jucer
Presets/: panoramix-generic.yaml  panoramix-track-1.yaml  panoramix-track-2.yaml  panoramix.yaml  simple-synth.yaml  track-1.yaml  track-2.yaml  track-3.yaml
Presets/etudes/: sinusoids.yaml
Source/: ControlContainer.cpp  ControlContainer.h  ControlElement.cpp  ControlElement.h  ControlElementFactory.cpp  ControlElementFactory.h  ControlElementHost.cpp  ControlElementHost.h  ControlElementKnob.cpp  ControlElementKnob.h  ControlElementToggle.cpp  ControlElementToggle.h  ControlElementUI.cpp  ControlElementUI.h  LayoutHints.cpp  LayoutHints.h  OSCControlElement.cpp  OSCControlElement.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetPage.cpp  PresetPage.h  PresetParser.cpp  PresetParser.h  UIComponentFactory.cpp  UIComponentFactory.h
